--- a/templates/home.html
+++ b/templates/home.html
@@ -129,7 +129,7 @@
           </select>
       </div>
       <div class="mb-3">
-        <input class="btn btn-primary" type="submit" value="Predict your Maths Score" required />
+        <input class="btn btn-primary" type="submit" value="Predict Stroke" required />
       </div>
     </form>
     <h2>
