--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
         </h1>
         <div class="mb-3">
             <label class="form-label">Gender</label>
-            <select class="form-control" name="gender" placeholder="Enter you Gender" required>
+            <select class="form-control" name="gender" placeholder="Enter you Gender" >
                 <option class="placeholder" selected disabled value="">Select your Gender</option>
                 <option value="male">
                     Male
@@ -27,7 +27,7 @@
         <div class="mb-3">
             <label class="form-label">Hypertension</label>
             <select class="form-control" name="hypertension"
-                placeholder="Enter Hypertensioin" required type="number">
+                placeholder="Enter Hypertensioin"  type="number">
                 <option class="placeholder" selected disabled value="">Select Hypertension</option>
                 <option value="0">
                     No
@@ -40,7 +40,7 @@
         <div class="mb-3">
             <label class="form-label">Heart Disease</label>
             <select class="form-control" name="heart_disease" 
-              type="number" placeholder="Patient has Heart Disease" required>
+              type="number" placeholder="Patient has Heart Disease" >
                 <option class="placeholder" selected disabled value="">Has Heart Disease</option>
                 <option value="0">
                     No
@@ -54,7 +54,7 @@
             <label class="form-label">Ever married</label>
             <select class="form-control" name="ever_married"
               placeholder="Ever married"
-                required>
+                >
                 <option class="placeholder" selected disabled value="">Select Test_course</option>
                 <option value="No">
                     No
@@ -67,7 +67,7 @@
         <div class="mb-3">
             <label class="form-label">Work Type</label>
             <select class="form-control" name="work_type" placeholder="Work Type"
-                required>
+                >
                 <option class="placeholder" selected disabled value="">Work Type</option>
                 <option value="Private">
                     Private
@@ -89,7 +89,7 @@
         <div class="mb-3">
             <label class="form-label">Residence Type</label>
             <select class="form-control" name="Residence_type" placeholder="Residence Type"
-                required>
+                >
                 <option class="placeholder" selected disabled value="">Residence Type</option>
                 <option value="Urban">
                   Urban
@@ -112,7 +112,7 @@
         <div class="mb-3">
           <label class="form-label">Smoking Status</label>
           <select class="form-control" name="smoking_status" placeholder="Smoking Status"
-              required>
+              >
               <option class="placeholder" selected disabled value="">Smoking Status</option>
               <option value="Unknown">
                   Unknown
@@ -129,7 +129,7 @@
           </select>
       </div>
       <div class="mb-3">
-        <input class="btn btn-primary" type="submit" value="Predict Stroke" required />
+        <input class="btn btn-primary" type="submit" value="Predict Stroke"  />
       </div>
     </form>
     <h2>
